--- a/channel-analysis.tex
+++ b/channel-analysis.tex
@@ -61,7 +61,7 @@ bibencoding=auto
 
 \begin{document}
 
-\title{Payment Channels Analysis, a Practical Approach}
+\title{A Practical Approach to Analyzing Bitcoin Payment Channels}
 % \author{Jo\"el Gugger\inst{1} \and Thomas Shababi\inst{2} \and Daniel
 % Lebrecht\inst{2}}
 \author{Jo\"el Gugger\inst{1}}
