--- a/channel-analysis.tex
+++ b/channel-analysis.tex
@@ -62,18 +62,14 @@ bibencoding=auto
 \begin{document}
 
 \title{A Practical Approach to Analyzing Bitcoin Payment Channels}
-% \author{Jo\"el Gugger\inst{1} \and Thomas Shababi\inst{2} \and Daniel
-% Lebrecht\inst{2}}
 \author{Jo\"el Gugger\inst{1}}
+
 \authorrunning{Jo\"el Gugger et al.}
-% \tocauthor{Jo\"el Gugger, Thomas~S.~Shababi, and Daniel Lebrecht}
 \tocauthor{Jo\"el Gugger}
-% \subtitle{{\normalsize\today{\small\ -- DRAFT}}}
-% \institute{HES-SO Master, Lausanne, Switzerland\\
-% \email{joel.gugger@master.hes-so.ch} \and DigiThink, Neuch\^atel, Switzerland
-% \\ \email{info@digithink.ch} }
-\institute{HES-SO Master, Lausanne, Switzerland\\
-\email{joel.gugger@master.hes-so.ch}}
+
+\subtitle{{\normalsize\today{\small\ -- DRAFT -- THIS DOCUMENT IS CONFIDENTIAL AND UNDER NDA -- NO COPY ALLOWED}}}
+
+\institute{TrueLevel SA, Neuch\^atel, Switzerland\\ \email{joel@truelevel.io}}
 
 \maketitle
 
